<?xml version="1.0" encoding="utf-8"?>
<!-- This layout is used to implement the basic functionality into each activity screen-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/box"
        android:layout_weight="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/toggleButton"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="#808080"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:background="#00000000"
        android:contentDescription="@string/home_desc"
        android:padding="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@id/toggleButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_button_white" />

    <ImageButton
        android:id="@+id/infoButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:background="#00000000"
        android:contentDescription="@string/toggle_desc"
        android:padding="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dropdown_menu_white" />

    <ImageButton
        android:id="@+id/searchButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/searchButton_desc"
        android:padding="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search_button_white" />

    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="#ffffff"
        android:visibility="visible"
        app:theme="@style/SearchViewStyle"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintTop_toTopOf="parent" />

    <!--This linear layout is the menu that contains manga information, themes, credits, etc-->
    <LinearLayout
        android:id="@+id/toggleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#808080"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/homeButton"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/favourites"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/favourites"
            android:textAlignment="viewStart"
            android:textSize="12sp" />

        <Button
            android:id="@+id/themes"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/themes"
            android:textAlignment="viewStart"
            android:textSize="12sp" />

        <Button
            android:id="@+id/credits"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/credits"
            android:textAlignment="viewStart"
            android:textSize="12sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="homeButton,infoButton,searchButton,searchBar" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/entireTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="homeButton,infoButton,searchButton,searchBar,textView,toggleButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
